# ChangeLog for net-misc/nxclient
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/nxclient/ChangeLog,v 1.6 2004/05/15 18:33:12 stuart Exp $

*nxclient-1.3.2 (15 May 2004)

  15 May 2004; Stuart Herbert <stuart@gentoo.org> nxclient-1.3.2.ebuild:
  Version bump

  15 May 2004; Stuart Herbert <stuart@gentoo.org> nxclient-1.2.2-r1.ebuild,
  nxclient-1.2.2.ebuild, nxclient-1.3.0_beta2.ebuild:
  Removed old versions; I'm not supporting them any more

*nxclient-1.3.0 (21 dec 2003)

  21 Dec 2003; Stuart Herbert <stuart@gentoo.org> :
  Version bump

*nxclient-1.3.0_beta2 (13 Nov 2003)

  13 Nov 2003; Stuart Herbert <stuart@gentoo.org> nxclient-1.3.0_beta2.ebuild:
  Added 1.3.0_beta2

*nxclient-1.2.2-r1 (10 Sep 2003)

  10 Sep 2003; stuart metadata.xml, nxclient-1.2.2-r1.ebuild,
  nxclient-1.2.2.ebuild:
  Added ebuild for nxclient-1.2.2-42 release

*nxclient-1.2.2 (27 Aug 2003)

  27 Aug 2003; stuart nxclient-1.2.2.ebuild, files/1.2.2/50nxclient:
  Initial import
