@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/nxclient
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nxclient/ChangeLog,v 1.6 2004/05/15 18:33:12 stuart Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nxclient/ChangeLog,v 1.7 2004/06/14 00:16:35 spyderous Exp $
+
+  13 Jun 2004; Donnie Berkholz <spyderous@gentoo.org>; nxclient-1.3.0.ebuild,
+  nxclient-1.3.2.ebuild:
+  Change x11-base/xfree dependency to virtual/x11 (#52153).
 
 *nxclient-1.3.2 (15 May 2004)
 
